flapivor/tests/m3/hopix/typechecker/bad/63-for-01.hopix
val x : Ref<Int> = ref 0

val main : String =
    for i = 0 to 10 {
      x := !x + 1
    }
